Meme component and styling

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,30 @@ body{
 .header--title {
   margin-right: auto;
 }
+
+main{
+  padding: 36px;
+}
+
+.form{
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 10px;
+}
+
+.form--input {
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  background: purple;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
