--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@ body{
   font-family: "Karla", sans-serif;
 }
 
-
 .header {
   display: flex;
   align-items: center;
@@ -34,6 +33,7 @@ main{
   display: grid;
   grid-template: 40px 40px / 1fr 1fr;
   gap: 10px;
+  margin-bottom: 17px;
 }
 
 .form--input {
@@ -52,7 +52,44 @@ main{
   border: none;
   cursor: pointer;
 }
+/*****/
+.meme{
+  position: relative;
+}
 
 .meme--image {
   width: 70%;
+  border-radius: 30px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 4em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+          2px 2px 0 #000,
+          -2px -2px 0 #000,
+          2px -2px 0 #000,
+          -2px 2px 0 #000,
+          0 2px 0 #000,
+          2px 0 0 #000,
+          0 -2px 0 #000,
+          -2px 0 0 #000,
+          2px 2px 5px #000;
+}
+.bottom {
+  bottom: 40px;
+}
+
+.top {
+  top: 40px;
 }
